refactor: 重命名项目并更新配置
- 将项目名称从 KotlinMC 改为 CarbKotlin
- 更新 GitHub 链接
- 修改插件配置文件中的名称、ID 和加载方式
- 更新 API 版本至1.21.4
- 移除 folia 支持标识

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,8 @@
-name: Kotlin
+name: CarbKotlin
 main: xyz.gmitch215.kotlinmc.Spigot
 version: ${project.ext.kotlin_version}
 description: ${project.description}
-api-version: 1.13
+api-version: 1.21.4
 author: gmitch215
-folia-supported: true
+load: STARTUP
 website: ${project.ext.url}
