build(plugin): 修改插件加载方式为 ROOT
- 将 plugin.yml 文件中的 load 属性从 STARTUP 改为 ROOT
- 这个修改可能会影响插件的加载顺序和性能

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,5 +4,5 @@ version: ${project.ext.kotlin_version}
 description: ${project.description}
 api-version: 1.21.4
 author: gmitch215
-load: STARTUP
+load: ROOT
 website: ${project.ext.url}
